--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/" />
     <title>NgAppN1 app</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png">   
+    <link rel="icon" type="image/x-icon" href="favicon.png">   
 </head>
 <body>
     <main-app>Loading...</my-app>
